# Gazeta

./: .dockerignore  .env.example  .gitignore  CLAUDE.md  DEPLOY_NAS.md  Dockerfile  NOTEKEEP_INTEGRATION.md  PRINTER_PROTOCOL.md  README.md  docker-compose.yml  pyproject.toml
docker/: entrypoint.sh
scripts/: calibrate_print.py  cron_print.sh  deploy_nas.sh  dump_sources.py  find_printer.py  google_oauth.py  keep_awake.sh  print_summary.py  test_print.py
src/: config.py  main.py
src/ai/: client.py  prompts.py
src/printer/: driver.py  protocol.py  renderer.py
src/routes/: note.py  raw.py  summary.py
src/sources/: calendar.py  crypto.py  email.py  google_auth.py  hackernews.py  joke.py  news.py  quote.py  weather.py  wikipedia.py  worldcup.py
src/templates/: _base.html.j2  _icons.html.j2  note.html.j2  summary.html.j2  summary_block.html.j2
