[project]
name = "gazeta"
version = "0.1.0"
description = "Daily morning summary printed on a 57mm Bluetooth thermal printer."
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.32",
    "pydantic-settings>=2.6",
    "python-dotenv>=1.0",
    "httpx>=0.27",
    "jinja2>=3.1",
    "pillow>=11.0",
    "playwright>=1.49",
    "structlog>=24.4",
    "feedparser>=6.0",
    "anthropic>=0.40",
    "google-auth>=2.36",
    "google-auth-oauthlib>=1.2",
    "google-api-python-client>=2.150",
]

[project.optional-dependencies]
ble = ["bleak>=0.22"]
dev = ["pytest>=8.3", "pytest-asyncio>=0.24", "ruff>=0.8"]

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["."]
include = ["src*"]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.pytest.ini_options]
asyncio_mode = "auto"
